--- a/index.html
+++ b/index.html
@@ -79,6 +79,235 @@
 
     </section>
 
+    <!-- Feature Product sestion -->
+    <section id="featureProduct" class="section-p1">
+        <h2>Feature Products</h2>
+        <P>Summer Collection New Mordan Design</P>
+        <div class="pro-container">
+            <!-- products -->
+            <div class="pro">
+                <img src="img/Feature product/barcelona jersey.jpg" alt="">
+                <div class="description">
+                    <span>Nike</span>
+                    <h5>Barcelona Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/psg jersey.jpg" alt="">
+                <div class="description">
+                    <span>Nike</span>
+                    <h5>PSG Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$100</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/liverpool jersey-911qie.jpg" alt="">
+                <div class="description">
+                    <span>NIke</span>
+                    <h5>liverpool Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$90</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/ronaldo man u jersey.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Manchester united Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$80</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/Manchester-City-Home-Kit-2021-22-1.jpg" alt="">
+                <div class="description">
+                    <span>Puma</span>
+                    <h5>Manchester City Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$80</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/real madrid jersey.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Real madrid Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$85</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- banner -->
+    <section id="banner" class="section-m1">
+        <h4>Best Quality</h4>
+        <h2>Up to <span>20% off</span> - all new jersey</h2>
+        <button class="normal">Explore More</button>
+    </section>
+
+    <!-- New arrivals sestion -->
+    <section id="featureProduct" class="section-p1">
+        <h2>New arrivals</h2>
+        <P>Summer Collection New Mordan Design</P>
+        <div class="pro-container">
+            <!-- products -->
+            <div class="pro">
+                <img src="img/Feature product/barcelona jersey.jpg" alt="">
+                <div class="description">
+                    <span>Nike</span>
+                    <h5>Barcelona Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/psg jersey.jpg" alt="">
+                <div class="description">
+                    <span>Nike</span>
+                    <h5>PSG Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$100</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/liverpool jersey-911qie.jpg" alt="">
+                <div class="description">
+                    <span>NIke</span>
+                    <h5>liverpool Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$90</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/ronaldo man u jersey.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Manchester united Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$80</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/Manchester-City-Home-Kit-2021-22-1.jpg" alt="">
+                <div class="description">
+                    <span>Puma</span>
+                    <h5>Manchester City Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$80</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/Feature product/real madrid jersey.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Real madrid Home kit</h5>
+                    <div class="star">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h4>$85</h4>
+                </div>
+                <a href="#"><i class="fa fa-cart-plus cart" aria-hidden="true"></i></a>
+            </div>
+
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 
