--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
+                <li id="cart-bag"><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
+                <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
+        </div>
+
+        <div id="mobile">
+            <a href="cart.html"><i class="fa fa-shopping-cart"></i></a>
+            <i id="bar" class="fa fa-bars"></i>
         </div>
 
     </section>
@@ -46,7 +52,7 @@
 
     <!-- feature section -->
     <section id="feature" class="section-p1">
-        
+
         <div class="feature-box">
             <img src="img/Feature/free-shipping.png" alt="">
             <h6>Free shipping</h6>
@@ -307,6 +313,97 @@
 
         </div>
     </section>
+
+    <!-- feature banner -->
+    <section id="sm-banner" class="section-p1">
+
+        <div class="banner-box">
+            <h4>Crazy deals</h4>
+            <h2>Buy 1 get 1 free</h2>
+            <span>The best jersey you can buy is no sale</span>
+            <button class="normal">Learn More</button>
+        </div>
+
+        <div class="banner-box banner-box2">
+            <h4>sping/summer</h4>
+            <h2>upcomming season</h2>
+            <span>The best jersey you can buy</span>
+            <button class="normal">Learn More</button>
+        </div>
+
+    </section>
+
+    <!-- 3 banners section -->
+    <section id="banner3">
+
+        <div class="banner-box">
+            <h2>Season sale</h2>
+            <h3>Winter Collection - 50% Off</h3>
+        </div>
+
+        <div class="banner-box banner-box2">
+            <h2>New club jersey</h2>
+            <h3>2022 collection</h3>
+        </div>
+
+        <div class="banner-box banner-box3">
+            <h2>Best Qyality</h2>
+            <h3>summer Collection - 50% Off</h3>
+        </div>
+
+    </section>
+
+    <footer class="section-p1">
+
+        <div class="col">
+            <img class="logo" src="img/Company Logo.png" alt="">
+            <h4>contact</h4>
+            <p> <strong>Address:</strong> 17/6 no Jubilee Ghat, Mymensingh</p>
+            <p> <strong>Phone:</strong> 01671648414</p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class='fa fa-facebook'></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About us</a>
+            <a href="#">Delivery information</a>
+            <a href="#">Privasy policy</a>
+            <a href="#">Trems & conditions</a>
+            <a href="#">Contact us</a>
+        </div>
+
+        <div class="col">
+            <h4>My account</h4>
+            <a href="#">Sign in</a>
+            <a href="#">View cart</a>
+            <a href="#">My wishlist</a>
+            <a href="#">Track my order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col install">
+            <h4>install App</h4>
+            <p>From app store or Google Play</p>
+            <div class="row">
+                <img src="img/google-play-app-store-icons-download-google-pay-google-play-app-store-icons-editable-vector-illustration-isolated-white-177051728.jpg" alt="">
+            </div>
+            <p>Secured payment gateways</p>
+            <img class="paymentGetways" src="img/payment.jpg" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>&copy; 2022, MR13</p>
+        </div>
+
+    </footer>
 
     <script src="script.js"></script>
 </body>
